--- a/tex/kapitel/kapitel_1_einleitung.tex
+++ b/tex/kapitel/kapitel_1_einleitung.tex
@@ -5,9 +5,9 @@ Dieses Kapitel führt in das Thema der Portierung des Laufplaner in das \ac{ROS}
 
 \section{Motivation}
 
-Die einfachste Art einen Laufroboter zu steuern, ist die Anwendung eines \emph{statischen Laufmusters} wie dem Dreifußgang. Diese Laufmuster funktionieren auf ebenem Untergrund für beispielsweise sechsbeinige Laufroboter sehr gut und stabil. Anders sieht es allerdings aus, wenn das Gelände Hindernisse aufweist. Es ist in erster Linie sinnvoll zusätzlich zu dem statischen Laufmuster mit einem \emph{reaktiven Laufmuster} auf die Umgebung zu reagieren. Ist ein Gelände allerdings stark uneben und besteht eventuell sogar aus unüberwindbaren Abschnitten, würde das reaktive Laufmuster dominieren. Der Laufroboter würde sich nur noch langsam mittels des reaktiven Laufmusters nach vorne tasten.
+Die einfachste Art einen Laufroboter zu steuern, ist die Anwendung eines \emph{statischen oder regulären Laufmusters} wie dem \emph{wave gait}. Diese Laufmuster funktionieren auf ebenem Untergrund für beispielsweise sechsbeinige Laufroboter sehr gut und stabil. Anders sieht es allerdings aus, wenn das Gelände Hindernisse aufweist. Es ist in erster Linie sinnvoll zusätzlich zu dem regulären Laufmuster mit einem \emph{reaktiven Laufmuster} auf die Umgebung zu reagieren. Ist ein Gelände allerdings stark uneben und besteht eventuell sogar aus unüberwindbaren Abschnitten, würde das reaktive Laufmuster dominieren. Der Laufroboter würde sich nur noch langsam mittels des reaktiven Laufmusters nach vorne tasten.
 
-Planende Verfahren verbessern diesen Prozess, indem sie Lösungen für unebenes Gelände schon vor oder während des Laufens berechnen und daher nicht mehr darauf reagieren müssen, sondern aktiv einen gültigen Weg zu Ziel planen. Dies ist in Fällen wie der Bergung von Opfern in einem unebenen Gelände oder einem Kernkraftwerk-Unfall hilfreich, da in unterschiedlichsten Umgebungen gelaufen werden muss. Aber auch bei Service-Robotern könnte eine solche Planung sinnvoll sein.
+Planende Verfahren bzw. \emph{freie Laufmuster} verbessern diesen Prozess, indem sie Lösungen für unebenes Gelände schon vor oder während des Laufens berechnen und daher nicht mehr darauf reagieren müssen, sondern aktiv einen gültigen Weg zu Ziel planen. Dies ist in Fällen wie der Bergung von Opfern in einem unebenen Gelände oder einem Kernkraftwerk-Unfall hilfreich, da in unterschiedlichsten Umgebungen gelaufen werden muss. Aber auch bei Service-Robotern könnte eine solche Planung sinnvoll sein.
 
 Diese Arbeit nutzt ein bestehendes planendes Verfahren und portiert dieses auf eine Umgebung im \ac{ROS} für den sechsbeinigen Laufroboter Akrobat.
 
