--- a/tex/kapitel/kapitel_1_einleitung.tex
+++ b/tex/kapitel/kapitel_1_einleitung.tex
@@ -23,14 +23,10 @@ Als Simulationsumgebung bietet sich Gazebo an, da Gazebo neben einer Visualisier
 
 \section{Aufbau der Arbeit}
 
-TODO change aufbau, weil sich struktur ändert
-
 Die Arbeit beginnt in \autoref{kap2} mit den Grundlagen, die für die Portierung des Laufplaners in das \ac{ROS} und Gazebo nötig sind. Dabei geht die Arbeit auf den Laufroboter, auf direkte und inverse Kinematik sowie die Grundlagen zur Laufplanung ein. Außerdem werden die benötigten Frameworks wie das \ac{ROS} und Gazebo vorgestellt.
 
-Nach den Grundlagen folgt in \autoref{kap3} die konzeptionelle Darstellung des Algorithmus Random Sampling, welcher zur Laufplanung genutzt werden soll. Zunächst wird der Algorithmus mit weiteren Algorithmen verglichen und dann detailliert erklärt. Das Kapitel geht darauf ein, wie gültige Lösungen generiert, aber auch bewertet werden können.
+TODO: Kapitel 3 - 5 aufbau
 
-\autoref{kap4} analysiert existierende Laufplaner und stellt einen Ansatz dar, diese in ein \ac{ROS}-Paket, welches Gazebo als Simulationsumgebung nutzt, zu migrieren. Da die vorherigen Laufplaner über die 3D-Bibliothek OpenInventor laufen, sind einige Anpassungen nötig, damit der Laufplaner in Gazebo funktioniert.
+Die Ergebnisse der Implementierung der Simulationsumgebung und des Laufplaners aus \autoref{kap5} werden in \autoref{kap6} dargestellt und bewertet.
 
-Die Ergebnisse der Implementierung der Simulationsumgebung und des Laufplaners aus \autoref{kap4} werden in \autoref{kap5} dargestellt und bewertet.
-
-\autoref{kap6} fasst alle Ergebnisse zusammen und \autoref{kap7} gibt einen Ausblick darüber, wie der Laufplaner in zukünftigen Projekten noch weiterentwickelt werden könnte.
+\autoref{kap7} fasst alle Ergebnisse zusammen und \autoref{kap8} gibt einen Ausblick darüber, wie der Laufplaner in zukünftigen Projekten noch weiterentwickelt werden könnte.
