Verwandte Arbeiten fertig

--- a/tex/kapitel/kapitel_1_einleitung.tex
+++ b/tex/kapitel/kapitel_1_einleitung.tex
@@ -25,7 +25,7 @@ Als Simulationsumgebung bietet sich Gazebo an, da Gazebo neben einer Visualisier
 
 Die Arbeit beginnt in \autoref{kap2} mit den Grundlagen, die für die Portierung des Laufplaners in das \ac{ROS} und Gazebo nötig sind. Dabei geht die Arbeit auf den Laufroboter, auf direkte und inverse Kinematik sowie die Grundlagen zur Laufplanung ein. Außerdem werden die benötigten Frameworks wie das \ac{ROS} und Gazebo vorgestellt.
 
-TODO: Kapitel 3 - 5 aufbau
+\autoref{kap3} geht auf verwandete Arbeiten ein. Diese werden in \autoref{kap4} genutzt, um eine Lösung für die Laufplanung mit dem Akrobat herzuleiten. \autoref{kap5} stellt die Details der Implementierung dar.
 
 Die Ergebnisse der Implementierung der Simulationsumgebung und des Laufplaners aus \autoref{kap5} werden in \autoref{kap6} dargestellt und bewertet.
 
